Fix header spacing

--- a/src/pages/BaseRoll.css
+++ b/src/pages/BaseRoll.css
@@ -1,5 +1,6 @@
 #rollTypeContainer {
     margin: 0 auto;
+    margin-top: 100px;
     text-align: center;
 }
 
