--- a/src/pages/core.css
+++ b/src/pages/core.css
@@ -14,7 +14,7 @@ h1 {
 
 #lifepathHeader {
 	padding-top:40px;
-	margin-top:-190px;
+	margin-top:-165px;
 	z-index: 10;
 	width:100%;
 	margin-left:-10px;
